# ums

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  schema.yaml
src/: .env.template  asgi.py  settings.py  urls.py
src/users/: admin.py  models.py
src/users/migrations/: 0001_initial.py
